--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,9 +20,11 @@ dev_dependencies:
   flutter_lints: ^2.0.1
   json_serializable: ^6.3.1
   build_runner: ^2.2.0
+  mocktail: ^0.3.0
 
 scripts:
   gen: flutter pub run build_runner build --delete-conflicting-outputs
+  gen:watch: flutter pub run build_runner watch --delete-conflicting-outputs
   clean:
     - flutter clean
     - flutter pub get
