--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,5 +1,10 @@
 include: package:flutter_lints/flutter.yaml
 
+analyzer:
+  exclude:
+    - '**.g.dart'
+    - '**/generated_plugin_registrant.dart'
+
 linter:
   rules:
     prefer_single_quotes: true
