--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,12 +21,17 @@ dev_dependencies:
   json_serializable: ^6.3.1
   build_runner: ^2.2.0
   mocktail: ^0.3.0
+  faker: ^2.0.0
 
 scripts:
   gen: flutter pub run build_runner build --delete-conflicting-outputs
   gen:watch: flutter pub run build_runner watch --delete-conflicting-outputs
   clean:
     - flutter clean
+    - flutter pub get
+    - flutter pub upgrade
+  test: flutter test --verbose
+  update:
     - flutter pub get
     - flutter pub upgrade
 
