--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   cupertino_icons: ^1.0.5
   flutter_dotenv: ^5.0.2
   json_annotation: ^4.6.0
+  collection: ^1.16.0
 
 dev_dependencies:
   flutter_test:
