--- a/.github/workflows/test_workflow.yaml
+++ b/.github/workflows/test_workflow.yaml
@@ -24,4 +24,10 @@ jobs:
         run: flutter analyze
 
       - name: Test code
-        run: flutter test
+        run: flutter test --coverage
+
+      - name: Upload code coverage
+        uses: codecov/codecov-action@v1.2.2
+        with:
+          token: ${{secrets.CODECOV_TOKEN}}
+          file: coverage/lcov.info
