--- a/.github/workflows/build_apk.yaml
+++ b/.github/workflows/build_apk.yaml
@@ -21,9 +21,15 @@ jobs:
       - name: Install dependencies
         run: flutter pub get
       - name: Build apk
-        run: flutter build apk --split-per-abi
+        run: flutter build apk
+#        --split-per-abi
       - name: Upload apk
         uses: actions/upload-artifact@v3
         with:
           name: release-apk
-          path: build/app/outputs/apk/release/app-release.apk
+          path: build/app/outputs/apk/release/*.apk
+      - name: Release apk
+      - uses: ncipollo/release-action@v2
+        with:
+          artifacts: build/app/outputs/apk/release/*.apk
+          token: $
