--- a/.github/workflows/build_apk.yaml
+++ b/.github/workflows/build_apk.yaml
@@ -29,7 +29,7 @@ jobs:
           name: release-apk
           path: build/app/outputs/apk/release/*.apk
       - name: Release apk
-      - uses: ncipollo/release-action@v2
+        uses: ncipollo/release-action@v2
         with:
           artifacts: build/app/outputs/apk/release/*.apk
           token: $
