--- a/.github/workflows/build_apk.yaml
+++ b/.github/workflows/build_apk.yaml
@@ -5,8 +5,6 @@ on:
     branches:
       - main
   workflow_dispatch:
-    branches:
-      - main
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -21,15 +19,14 @@ jobs:
       - name: Install dependencies
         run: flutter pub get
       - name: Build apk
-        run: flutter build apk
-#        --split-per-abi
+        run: flutter build apk --split-per-abi
       - name: Upload apk
         uses: actions/upload-artifact@v3
         with:
           name: release-apk
           path: build/app/outputs/apk/release/*.apk
       - name: Release apk
-        uses: ncipollo/release-action@v2
+        uses: ncipollo/release-action@v1
         with:
           artifacts: build/app/outputs/apk/release/*.apk
           token: $
