--- a/.github/workflows/build_apk.yaml
+++ b/.github/workflows/build_apk.yaml
@@ -29,4 +29,4 @@ jobs:
         uses: ncipollo/release-action@v1
         with:
           artifacts: build/app/outputs/apk/release/*.apk
-          token: $
+          token: ${{secrets.GITHUB_TOKEN}}
