--- a/.github/workflows/build_apk.yaml
+++ b/.github/workflows/build_apk.yaml
@@ -1,9 +1,11 @@
-name: Build APK Workflow
+name: Build and release APK
 
 on:
   push:
-    branches:
-      - main
+    tags:
+      - '*'
+    branches-ignore:
+      - '!main'
   workflow_dispatch:
 jobs:
   build:
