--- a/.github/workflows/build_apk.yaml
+++ b/.github/workflows/build_apk.yaml
@@ -32,3 +32,5 @@ jobs:
         with:
           artifacts: build/app/outputs/apk/release/*.apk
           token: ${{secrets.GITHUB_TOKEN}}
+          commit: main
+          tag: v1.0.${{github.run_number}}
