serviços de local_storage

--- a/build.yaml
+++ b/build.yaml
@@ -8,7 +8,7 @@ targets:
           #
           # The default value for each is listed.
           any_map: false
-          checked: true
+          checked: false
           constructor: ""
           create_factory: true
           create_field_map: false
