--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,23 +5,29 @@ publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.17.6 <3.0.0"
+  sdk: '>=2.17.6 <3.0.0'
 
 dependencies:
+  collection: ^1.16.0
+  cupertino_icons: ^1.0.5
+  equatable: ^2.0.3
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.5
+  flutter_riverpod: ^1.0.4
+  flutter_secure_storage: ^6.0.0
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
   json_annotation: ^4.6.0
-  collection: ^1.16.0
+  path_provider: ^2.0.11
 
 dev_dependencies:
+  build_runner: ^2.2.0
+  faker: ^2.0.0
+  flutter_lints: ^2.0.1
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.1
   json_serializable: ^6.3.1
-  build_runner: ^2.2.0
   mocktail: ^0.3.0
-  faker: ^2.0.0
 
 scripts:
   gen: flutter pub run build_runner build --delete-conflicting-outputs
