--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -5,6 +5,7 @@ analyzer:
     - '**.g.dart'
     - '**/generated_plugin_registrant.dart'
     - 'test/'
+    - '**.freezed.dart'
 
 linter:
   rules:
