--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,14 +10,19 @@ environment:
 dependencies:
   collection: ^1.16.0
   cupertino_icons: ^1.0.5
-  equatable: ^2.0.3
+  dio: ^4.0.6
+  equatable: ^2.0.5
   flutter:
     sdk: flutter
   flutter_riverpod: ^1.0.4
   flutter_secure_storage: ^6.0.0
+  freezed_annotation: ^2.1.0
+  go_router: ^4.2.8
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   json_annotation: ^4.6.0
+  jwt_decoder: ^2.0.1
+  path: ^1.8.1
   path_provider: ^2.0.11
 
 dev_dependencies:
@@ -26,8 +31,11 @@ dev_dependencies:
   flutter_lints: ^2.0.1
   flutter_test:
     sdk: flutter
+  freezed: ^2.1.0+1
+  hive_generator: ^1.1.3
   json_serializable: ^6.3.1
   mocktail: ^0.3.0
+  source_gen: ^1.2.2
 
 scripts:
   gen: flutter pub run build_runner build --delete-conflicting-outputs
@@ -43,3 +51,5 @@ scripts:
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/
