--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   collection: ^1.16.0
   cupertino_icons: ^1.0.5
   dio: ^4.0.6
+  email_validator: ^2.1.17
   equatable: ^2.0.5
   flutter:
     sdk: flutter
