--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
   sdk: '>=2.17.6 <3.0.0'
 
 dependencies:
+  bloc_concurrency: ^0.2.0
   collection: ^1.16.0
   cupertino_icons: ^1.0.5
   dio: ^4.0.6
@@ -16,14 +17,15 @@ dependencies:
   flex_color_scheme: ^5.1.0
   flutter:
     sdk: flutter
-  flutter_riverpod: ^1.0.4
-  flutter_secure_storage: ^6.0.0
+  flutter_bloc: ^8.1.1
+  flutter_loggy: ^2.0.1
+  flutter_loggy_dio: ^2.0.0+3
+  formz: ^0.4.1
   freezed_annotation: ^2.1.0
-  go_router: ^4.2.8
-  hive: ^2.2.3
-  hive_flutter: ^1.1.0
+  hydrated_bloc: ^8.1.0
   json_annotation: ^4.6.0
   jwt_decoder: ^2.0.1
+  loggy: ^2.0.1+1
   path: ^1.8.1
   path_provider: ^2.0.11
 
@@ -34,7 +36,6 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   freezed: ^2.1.0+1
-  hive_generator: ^1.1.3
   json_serializable: ^6.3.1
   mocktail: ^0.3.0
   source_gen: ^1.2.2
@@ -46,6 +47,7 @@ scripts:
     - flutter clean
     - flutter pub get
     - flutter pub upgrade
+    - $gen
   test: flutter test --verbose
   update:
     - flutter pub get
