--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,6 +1,10 @@
 include: package:flutter_lints/flutter.yaml
 
 analyzer:
+  plugins:
+    - drift
+  errors:
+    invalid_annotation_target: ignore
   exclude:
     - '**.g.dart'
     - '**/generated_plugin_registrant.dart'
