--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,9 +12,11 @@ dependencies:
   collection: ^1.16.0
   cupertino_icons: ^1.0.5
   dio: ^4.0.6
+  drift: ^2.1.0
   email_validator: ^2.1.17
   equatable: ^2.0.5
   flex_color_scheme: ^5.1.0
+  flow_builder: ^0.0.9
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.1
@@ -22,15 +24,16 @@ dependencies:
   flutter_loggy_dio: ^2.0.0+3
   formz: ^0.4.1
   freezed_annotation: ^2.1.0
-  hydrated_bloc: ^8.1.0
   json_annotation: ^4.6.0
   jwt_decoder: ^2.0.1
   loggy: ^2.0.1+1
   path: ^1.8.1
   path_provider: ^2.0.11
+  sqlite3_flutter_libs: ^0.5.9
 
 dev_dependencies:
   build_runner: ^2.2.0
+  drift_dev: ^2.1.0
   faker: ^2.0.0
   flutter_lints: ^2.0.1
   flutter_test:
@@ -42,7 +45,7 @@ dev_dependencies:
 
 scripts:
   gen: flutter pub run build_runner build --delete-conflicting-outputs
-  gen:watch: flutter pub run build_runner watch --delete-conflicting-outputs
+  gen_watch: flutter pub run build_runner watch --delete-conflicting-outputs
   clean:
     - flutter clean
     - flutter pub get
@@ -52,6 +55,7 @@ scripts:
   update:
     - flutter pub get
     - flutter pub upgrade
+  db_analyze: flutter pub run drift_dev analyze
 
 flutter:
   uses-material-design: true
