--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,6 @@ dependencies:
   dio: ^4.0.6
   drift: ^2.1.0
   email_validator: ^2.1.17
-  equatable: ^2.0.5
   flex_color_scheme: ^5.1.0
   flow_builder: ^0.0.9
   flutter:
@@ -30,11 +29,10 @@ dependencies:
   loggy: ^2.0.1+1
   path: ^1.8.1
   path_provider: ^2.0.11
-  sqlite3_flutter_libs: ^0.5.9
+  sembast: ^3.3.0
 
 dev_dependencies:
   build_runner: ^2.2.0
-  drift_dev: ^2.1.0
   faker: ^2.0.0
   flutter_lints: ^2.0.1
   flutter_test:
