--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ dependencies:
   dio: ^4.0.6
   drift: ^2.1.0
   email_validator: ^2.1.17
-  flex_color_scheme: ^5.1.0
+  flex_color_scheme: ^6.0.0
   flow_builder: ^0.0.9
   flutter:
     sdk: flutter
@@ -27,7 +27,7 @@ dependencies:
   json_annotation: ^4.6.0
   jwt_decoder: ^2.0.1
   loggy: ^2.0.1+1
-  path: ^1.8.1
+  path: ^1.8.2
   path_provider: ^2.0.11
   sembast: ^3.3.0
 
@@ -35,6 +35,7 @@ dev_dependencies:
   build_runner: ^2.2.0
   faker: ^2.0.0
   flutter_lints: ^2.0.1
+  flutter_native_splash: ^2.2.8
   flutter_test:
     sdk: flutter
   freezed: ^2.1.0+1
@@ -49,7 +50,7 @@ scripts:
     - flutter clean
     - flutter pub get
     - flutter pub upgrade
-    - $gen
+    - $gen_watch
   test: flutter test --verbose
   update:
     - flutter pub get
