--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,19 @@ dev_dependencies:
   mocktail: ^0.3.0
   source_gen: ^1.2.2
 
+flutter_native_splash:
+  image: assets/laboratorioferreira_logo_sem_fundo.png
+  color: "CCD5AE"
+  android_12:
+    image: assets/laboratorioferreira_logo_sem_fundo.png
+    color: "CCD5AE"
+  android: true
+  ios: true
+  web: false
+  fullscreen: true
+
 scripts:
+  create_splash: flutter pub run flutter_native_splash:create
   gen: flutter pub run build_runner build --delete-conflicting-outputs
   gen_watch: flutter pub run build_runner watch --delete-conflicting-outputs
   clean:
