--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,8 @@ dependencies:
   cupertino_icons: ^1.0.5
   dio: ^4.0.6
   email_validator: ^2.1.17
+  firebase_core: ^1.21.1
+  firebase_crashlytics: ^2.8.9
   flex_color_scheme: ^6.0.0
   flutter:
     sdk: flutter
