--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   email_validator: ^2.1.17
   firebase_core: ^1.21.1
   firebase_crashlytics: ^2.8.9
+  firebase_storage: ^10.3.7
   flex_color_scheme: ^6.0.0
   flutter:
     sdk: flutter
