--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,11 +9,13 @@ environment:
 
 dependencies:
   collection: ^1.16.0
+  connectivity_plus: ^2.3.6+1
   cupertino_icons: ^1.0.5
   dio: ^4.0.6
   email_validator: ^2.1.17
   firebase_core: ^1.21.1
   firebase_crashlytics: ^2.8.9
+  firebase_performance: ^0.8.2+4
   firebase_storage: ^10.3.7
   flex_color_scheme: ^6.0.0
   flutter:
