--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   firebase_performance: ^0.8.2+4
   firebase_storage: ^10.3.7
   flex_color_scheme: ^6.0.0
+  flex_seed_scheme: ^1.0.0
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.1
