--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,10 +13,10 @@ dependencies:
   cupertino_icons: ^1.0.5
   dio: ^4.0.6
   email_validator: ^2.1.17
-  firebase_core: ^1.21.1
-  firebase_crashlytics: ^2.8.9
-  firebase_performance: ^0.8.2+4
-  firebase_storage: ^10.3.7
+  firebase_core: ^1.22.0
+  firebase_crashlytics: ^2.8.10
+  firebase_performance: ^0.8.3
+  firebase_storage: ^10.3.8
   flex_color_scheme: ^6.0.0
   flex_seed_scheme: ^1.0.1
   flutter:
@@ -31,7 +31,7 @@ dependencies:
   json_annotation: ^4.6.0
   jwt_decoder: ^2.0.1
   loggy: ^2.0.1+1
-  mask_text_input_formatter: ^2.4.0
+  mask: ^1.0.3
   path: ^1.8.2
   path_provider: ^2.0.11
   sembast: ^3.3.0
@@ -40,7 +40,7 @@ dev_dependencies:
   build_runner: ^2.2.0
   faker: ^2.0.0
   flutter_lints: ^2.0.1
-  flutter_native_splash: ^2.2.8
+  flutter_native_splash: ^2.2.9
   flutter_test:
     sdk: flutter
   freezed: ^2.1.0+1
@@ -67,7 +67,6 @@ scripts:
     - flutter clean
     - flutter pub get
     - flutter pub upgrade
-    - $gen_watch
   test: flutter test --verbose
   update:
     - flutter pub get
