--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,7 +9,7 @@ environment:
 
 dependencies:
   collection: ^1.16.0
-  connectivity_plus: ^2.3.6+1
+  connectivity_plus: ^2.3.7
   cupertino_icons: ^1.0.5
   dio: ^4.0.6
   email_validator: ^2.1.17
@@ -27,7 +27,7 @@ dependencies:
   formz: ^0.4.1
   freezed_annotation: ^2.1.0
   get_it: ^7.2.0
-  go_router: ^4.3.0
+  go_router: ^4.5.1
   json_annotation: ^4.6.0
   jwt_decoder: ^2.0.1
   loggy: ^2.0.1+1
@@ -37,16 +37,16 @@ dependencies:
   sembast: ^3.3.0
 
 dev_dependencies:
-  build_runner: ^2.2.0
+  build_runner: ^2.2.1
   faker: ^2.0.0
   flutter_lints: ^2.0.1
   flutter_native_splash: ^2.2.9
   flutter_test:
     sdk: flutter
   freezed: ^2.1.0+1
-  json_serializable: ^6.3.1
+  json_serializable: ^6.3.2
   mocktail: ^0.3.0
-  source_gen: ^1.2.2
+  source_gen: ^1.2.5
 
 flutter_native_splash:
   image: assets/laboratorioferreira_logo_sem_fundo.png
