--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,11 +13,11 @@ dependencies:
   cupertino_icons: ^1.0.5
   dio: ^4.0.6
   email_validator: ^2.1.17
-  firebase_core: ^1.22.0
-  firebase_crashlytics: ^2.8.10
-  firebase_performance: ^0.8.3
-  firebase_storage: ^10.3.8
-  flex_color_scheme: ^6.0.0
+  firebase_core: ^1.23.0
+  firebase_crashlytics: ^2.8.11
+  firebase_performance: ^0.8.3+1
+  firebase_storage: ^10.3.9
+  flex_color_scheme: ^6.0.1
   flex_seed_scheme: ^1.0.1
   flutter:
     sdk: flutter
@@ -27,8 +27,8 @@ dependencies:
   formz: ^0.4.1
   freezed_annotation: ^2.1.0
   get_it: ^7.2.0
-  go_router: ^4.5.1
-  json_annotation: ^4.6.0
+  go_router: ^5.0.2
+  json_annotation: ^4.7.0
   jwt_decoder: ^2.0.1
   loggy: ^2.0.1+1
   mask: ^1.0.3
@@ -40,11 +40,11 @@ dev_dependencies:
   build_runner: ^2.2.1
   faker: ^2.0.0
   flutter_lints: ^2.0.1
-  flutter_native_splash: ^2.2.9
+  flutter_native_splash: ^2.2.10+1
   flutter_test:
     sdk: flutter
   freezed: ^2.1.0+1
-  json_serializable: ^6.3.2
+  json_serializable: ^6.4.0
   mocktail: ^0.3.0
   source_gen: ^1.2.5
 
