--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,49 +5,50 @@ publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.17.6 <3.0.0'
+  sdk: '>=2.18.4 <3.0.0'
 
 dependencies:
   collection: ^1.16.0
-  connectivity_plus: ^2.3.9
+  connectivity_plus: ^3.0.2
   cupertino_icons: ^1.0.5
   dio: ^4.0.6
   email_validator: ^2.1.17
-  firebase_core: ^1.24.0
-  firebase_crashlytics: ^2.8.13
-  firebase_performance: ^0.8.3+3
-  firebase_storage: ^10.3.11
+  firebase_core: ^2.1.1
+  firebase_crashlytics: ^3.0.4
+  firebase_performance: ^0.9.0+4
+  firebase_storage: ^11.0.4
   flex_color_scheme: ^6.0.1
   flex_seed_scheme: ^1.0.1
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.1
-  flutter_loggy: ^2.0.1
-  flutter_loggy_dio: ^2.0.0+3
-  flutter_riverpod: ^1.0.4
+  flutter_loggy: ^2.0.2
+  flutter_loggy_dio: ^2.0.1
+  flutter_riverpod: ^2.1.1
   formz: ^0.4.1
-  freezed_annotation: ^2.1.0
+  freezed_annotation: ^2.2.0
   get_it: ^7.2.0
-  go_router: ^5.0.5
+  go_router: ^5.1.5
   json_annotation: ^4.7.0
   jwt_decoder: ^2.0.1
-  loggy: ^2.0.1+1
-  mask: ^1.0.3
+  loggy: ^2.0.3
+  mask: ^1.0.4
   path: ^1.8.2
   path_provider: ^2.0.11
-  sembast: ^3.3.0
+  sembast: ^3.3.1
+
 
 dev_dependencies:
   build_runner: ^2.3.0
   faker: ^2.0.0
   flutter_lints: ^2.0.1
-  flutter_native_splash: ^2.2.11
+  flutter_native_splash: ^2.2.14
   flutter_test:
     sdk: flutter
-  freezed: ^2.1.0+1
-  json_serializable: ^6.5.1
+  freezed: ^2.2.0
+  json_serializable: ^6.5.4
   mocktail: ^0.3.0
-  source_gen: ^1.2.5
+  source_gen: ^1.2.6
 
 flutter_native_splash:
   image: assets/laboratorioferreira_logo_sem_fundo.png
