--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   formz: ^0.4.1
   freezed_annotation: ^2.2.0
   go_router: ^5.1.5
+  isar: ^3.0.4
+  isar_flutter_libs: ^3.0.4
   json_annotation: ^4.7.0
   jwt_decoder: ^2.0.1
   loggy: ^2.0.3
@@ -43,6 +45,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   freezed: ^2.2.0
+  isar_generator: ^3.0.4
   json_serializable: ^6.5.4
   mocktail: ^0.3.0
   source_gen: ^1.2.6
