--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -24,7 +24,9 @@ jobs:
         run: flutter test --coverage
 
       - name: Upload code coverage
-        uses: codecov/codecov-action@v1.2.2
+        uses: codecov/codecov-action@v3
         with:
           token: ${{secrets.CODECOV_TOKEN}}
           file: coverage/lcov.info
+          fail_ci_if_error: true
+          verbose: true
