--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -27,6 +27,6 @@ jobs:
         uses: codecov/codecov-action@v3
         with:
           token: ${{secrets.CODECOV_TOKEN}}
-          file: coverage/lcov.info
+          files: coverage/lcov.info
           fail_ci_if_error: true
           verbose: true
