refatoração do riverpod

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   jwt_decoder: ^2.0.1
   loggy: ^2.0.3
   mask: ^1.0.4
+  path: ^1.8.2
   path_provider: ^2.0.11
   riverpod_annotation: ^1.0.6
   sembast: ^3.3.1
