--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
 dev_dependencies:
   build_runner: ^2.3.2
   faker: ^2.0.0
+  flutter_gen_runner: ^5.1.0+1
   flutter_lints: ^2.0.1
   flutter_native_splash: ^2.2.15
   flutter_test:
@@ -56,6 +57,12 @@ flutter_native_splash:
   web: false
   fullscreen: true
 
+flutter_gen:
+  output: lib/generated
+  colors:
+    inputs:
+      - assets/colors/colors.xml
+
 scripts:
   create_splash: flutter pub run flutter_native_splash:create
   gen: flutter pub run build_runner build --delete-conflicting-outputs
@@ -73,4 +80,5 @@ scripts:
 flutter:
   uses-material-design: true
   assets:
-    - assets/
+    - assets/images/
+    - assets/fixtures/
