--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   mask: ^1.0.4
   path: ^1.8.2
   path_provider: ^2.0.11
+  riverpod_annotation: ^1.0.6
   sembast: ^3.3.1
 
 dev_dependencies:
@@ -45,6 +46,7 @@ dev_dependencies:
   freezed: ^2.2.1
   json_serializable: ^6.5.4
   mocktail: ^0.3.0
+  riverpod_generator: ^1.0.6
 
 flutter_native_splash:
   image: assets/laboratorioferreira_logo_sem_fundo.png
