--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,12 +20,14 @@ dependencies:
   flex_seed_scheme: ^1.1.0
   flutter:
     sdk: flutter
+  flutter_hooks: ^0.18.5+1
   flutter_loggy: ^2.0.2
   flutter_loggy_dio: ^2.0.1
   flutter_riverpod: ^2.1.1
   formz: ^0.4.1
   freezed_annotation: ^2.2.0
   go_router: ^5.2.0
+  hooks_riverpod: ^2.1.1
   json_annotation: ^4.7.0
   jwt_decoder: ^2.0.1
   loggy: ^2.0.3
@@ -40,7 +42,7 @@ dev_dependencies:
   faker: ^2.0.0
   flutter_gen_runner: ^5.1.0+1
   flutter_lints: ^2.0.1
-  flutter_native_splash: ^2.2.15
+  flutter_native_splash: ^2.2.16
   flutter_test:
     sdk: flutter
   freezed: ^2.2.1
@@ -83,4 +85,3 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/
-    - assets/fixtures/
