--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   flex_seed_scheme: ^1.1.0
   flutter:
     sdk: flutter
+  flutter_form_builder: ^7.7.0
   flutter_hooks: ^0.18.5+1
   flutter_loggy: ^2.0.2
   flutter_loggy_dio: ^2.0.1
