--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,9 +22,12 @@ dependencies:
     sdk: flutter
   flutter_form_builder: ^7.7.0
   flutter_hooks: ^0.18.5+1
+  flutter_localizations:
+    sdk: flutter
   flutter_loggy: ^2.0.2
   flutter_loggy_dio: ^2.0.1
   flutter_riverpod: ^2.1.1
+  form_builder_validators: ^8.4.0
   formz: ^0.4.1
   freezed_annotation: ^2.2.0
   go_router: ^5.2.0
