--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   freezed_annotation: ^2.2.0
   go_router: ^5.2.0
   hooks_riverpod: ^2.1.1
+  infinite_scroll_pagination: ^3.2.0
   json_annotation: ^4.7.0
   jwt_decoder: ^2.0.1
   loggy: ^2.0.3
