--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,14 +20,19 @@ dependencies:
   flex_seed_scheme: ^1.1.0
   flutter:
     sdk: flutter
+  flutter_form_builder: ^7.7.0
   flutter_hooks: ^0.18.5+1
+  flutter_localizations:
+    sdk: flutter
   flutter_loggy: ^2.0.2
   flutter_loggy_dio: ^2.0.1
   flutter_riverpod: ^2.1.1
+  form_builder_validators: ^8.4.0
   formz: ^0.4.1
   freezed_annotation: ^2.2.0
   go_router: ^5.2.0
   hooks_riverpod: ^2.1.1
+  infinite_scroll_pagination: ^3.2.0
   json_annotation: ^4.7.0
   jwt_decoder: ^2.0.1
   loggy: ^2.0.3
