--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,6 @@ dependencies:
   connectivity_plus: ^3.0.2
   cupertino_icons: ^1.0.5
   dio: ^4.0.6
-  email_validator: ^2.1.17
   firebase_core: ^2.3.0
   firebase_crashlytics: ^3.0.6
   firebase_performance: ^0.9.0+6
@@ -25,10 +24,8 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   flutter_loggy: ^2.0.2
-  flutter_loggy_dio: ^2.0.1
   flutter_riverpod: ^2.1.1
   form_builder_validators: ^8.4.0
-  formz: ^0.4.1
   freezed_annotation: ^2.2.0
   go_router: ^5.2.0
   hooks_riverpod: ^2.1.1
@@ -39,6 +36,7 @@ dependencies:
   mask: ^1.0.4
   path: ^1.8.2
   path_provider: ^2.0.11
+  pretty_dio_logger: ^1.2.0-beta-1
   riverpod_annotation: ^1.0.6
   sembast: ^3.3.1
 
