--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,10 +12,10 @@ dependencies:
   connectivity_plus: ^3.0.2
   cupertino_icons: ^1.0.5
   dio: ^4.0.6
-  firebase_core: ^2.3.0
-  firebase_crashlytics: ^3.0.6
-  firebase_performance: ^0.9.0+6
-  firebase_storage: ^11.0.6
+  firebase_core: ^2.4.0
+  firebase_crashlytics: ^3.0.7
+  firebase_performance: ^0.9.0+7
+  firebase_storage: ^11.0.7
   flex_seed_scheme: ^1.1.0
   flutter:
     sdk: flutter
@@ -27,28 +27,28 @@ dependencies:
   flutter_riverpod: ^2.1.1
   form_builder_validators: ^8.4.0
   freezed_annotation: ^2.2.0
-  go_router: ^5.2.0
+  go_router: ^5.2.4
   hooks_riverpod: ^2.1.1
-  infinite_scroll_pagination: ^3.2.0
   json_annotation: ^4.7.0
   jwt_decoder: ^2.0.1
   loggy: ^2.0.3
   mask: ^1.0.4
   path: ^1.8.2
   path_provider: ^2.0.11
-  pretty_dio_logger: ^1.2.0-beta-1
+  pretty_dio_logger: ^1.1.1
   riverpod_annotation: ^1.0.6
   sembast: ^3.3.1
+  very_good_infinite_list: ^0.7.0
 
 dev_dependencies:
   build_runner: ^2.3.2
-  faker: ^2.0.0
+  faker: ^2.1.0
   flutter_gen_runner: ^5.1.0+1
   flutter_lints: ^2.0.1
   flutter_native_splash: ^2.2.16
   flutter_test:
     sdk: flutter
-  freezed: ^2.2.1
+  freezed: ^2.3.2
   json_serializable: ^6.5.4
   mocktail: ^0.3.0
   riverpod_generator: ^1.0.6
