--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   form_builder_validators: ^8.4.0
   freezed_annotation: ^2.2.0
   go_router: ^5.2.4
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
   hooks_riverpod: ^2.1.1
   json_annotation: ^4.7.0
   jwt_decoder: ^2.0.1
