--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,7 @@ app.*.map.json
 
 coverage
 .vscode
+**/google-services.json
+**/firebase_options.dart
+**/*GoogleService*.*
+ios/firebase_app_id_file.json
