--- a/.gitignore
+++ b/.gitignore
@@ -49,6 +49,7 @@ app.*.map.json
 coverage
 .vscode
 **/google-services.json
-**/firebase_options.dart
 **/*GoogleService*.*
 ios/firebase_app_id_file.json
+**/*.env
+**/*env.g.dart
