--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   connectivity_plus: ^3.0.2
   cupertino_icons: ^1.0.5
   dio: ^4.0.6
+  envied: ^0.3.0
   firebase_core: ^2.4.1
   firebase_crashlytics: ^3.0.11
   firebase_performance: ^0.9.0+10
@@ -44,6 +45,7 @@ dependency_overrides:
 
 dev_dependencies:
   build_runner: ^2.3.3
+  envied_generator: ^0.3.0
   faker: ^2.1.0
   flutter_gen_runner: ^5.1.0+1
   flutter_lints: ^2.0.1
