--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -16,8 +16,8 @@ jobs:
       - name: Install dependencies
         run: flutter pub get
 
-      - name: Run code generation
-        run: flutter pub run build_runner build --delete-conflicting-outputs
+#      - name: Run code generation
+#        run: flutter pub run build_runner build --delete-conflicting-outputs
 
 #      - name: Dart format
 #        run: dart format --fix .
