--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -49,6 +49,7 @@ jobs:
   #          fail_ci_if_error: true
 
   analyze:
+    needs: test
     runs-on: ubuntu-latest
     steps:
       #      - name: Checkout
