--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -3,6 +3,39 @@ name: Run tests
 on: [push, workflow_dispatch]
 jobs:
   test:
+    needs: analyze
+    runs-on: ubuntu-latest
+    steps:
+      - name: Install Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          channel: 'stable'
+          cache: true
+
+      - name: Download compressed app from previous job
+        uses: actions/download-artifact@v3
+        with:
+          name: app
+
+      - name: Unzip app
+        run: |
+          unzip app.zip
+          rm app.zip
+
+      #      - name: Install dependencies
+      #        run: flutter pub get
+
+      - name: Test code
+        run: flutter test --coverage
+
+      - name: Upload code coverage
+        uses: codecov/codecov-action@v3
+        with:
+          token: ${{secrets.CODECOV_TOKEN}}
+          files: coverage/lcov.info
+          fail_ci_if_error: true
+
+  analyze:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -17,20 +50,11 @@ jobs:
       - name: Install dependencies
         run: flutter pub get
 
-#      - name: Run code generation
-#        run: flutter pub run build_runner build --delete-conflicting-outputs
+      - name: Run code generation
+        run: flutter pub run build_runner build --delete-conflicting-outputs
 
-#      - name: Dart format
-#        run: dart format --fix .
-      #
-      #      - name: Dart fix
-      #        run: dart fix --apply
-      #
-      #      - name: Analyze code
-      #        run: flutter analyze
-
-      - name: Test code
-        run: flutter test --coverage
+      - name: Analyze code
+        run: flutter analyze
 
       - name: Zip project files to upload
         run: zip -r app.zip .
@@ -40,27 +64,3 @@ jobs:
         with:
           name: app
           path: app.zip
-
-  #      - name: Upload code coverage
-  #        uses: codecov/codecov-action@v3
-  #        with:
-  #          token: ${{secrets.CODECOV_TOKEN}}
-  #          files: coverage/lcov.info
-  #          fail_ci_if_error: true
-
-  analyze:
-    needs: test
-    runs-on: ubuntu-latest
-    steps:
-      #      - name: Checkout
-      #        uses: actions/checkout@v3
-      - name: Download compressed app from previous job
-        uses: actions/download-artifact@v3
-        with:
-          name: app
-
-      - name: Unzip app
-        run: |
-          unzip app.zip
-          rm app.zip
-          ls -a
