--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -50,6 +50,9 @@ jobs:
       - name: Install dependencies
         run: flutter pub get
 
+      - name: Create .env file
+        run: touch .env
+
       - name: Run code generation
         run: flutter pub run build_runner build --delete-conflicting-outputs
 
