--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,7 @@ dependencies:
   flutter_riverpod: ^2.1.3
   form_builder_validators: ^8.4.0
   freezed_annotation: ^2.2.0
-  go_router: ^6.0.1
+  go_router: ^6.0.2
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   hooks_riverpod: ^2.1.3
@@ -35,6 +35,7 @@ dependencies:
   jwt_decoder: ^2.0.1
   loggy: ^2.0.3
   mask: ^1.0.4
+  path: ^1.8.3
   path_provider: ^2.0.12
   pretty_dio_logger: ^1.1.1
   riverpod_annotation: ^1.1.1
@@ -42,6 +43,7 @@ dependencies:
 
 dependency_overrides:
   collection: 1.17.0
+  path: 1.8.2
 
 dev_dependencies:
   build_runner: ^2.3.3
