--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,6 +1,6 @@
 name: Run tests
 
-on: [push, workflow_dispatch]
+on: [ pull_request, workflow_dispatch ]
 jobs:
   analyze:
     runs-on: ubuntu-latest
