--- a/.gitignore
+++ b/.gitignore
@@ -51,5 +51,5 @@ coverage
 **/google-services.json
 **/*GoogleService*.*
 ios/firebase_app_id_file.json
-**/*.env
+**/*.env.production
 **/*env.g.dart
