--- a/env/.env.example
+++ b/env/.env.example
@@ -7,3 +7,8 @@ FIREBASE_IOS_API_KEY=
 FIREBASE_IOS_APP_ID=
 FIREBASE_IOS_CLIENT_ID=
 FIREBASE_IOS_BUNDLE_ID=
+API_URL=
+LOCAL_DB_SETTINGS_BOX_NAME=
+LOCAL_DB_SESSION_KEY=
+LOCAL_DB_THEMEMODE_KEY=
+LOCAL_DB_USE_M3_KEY=
