--- a/.gitignore
+++ b/.gitignore
@@ -48,7 +48,7 @@ app.*.map.json
 
 coverage
 .vscode
-**/google-services.json
-**/*GoogleService*.*
-**/firebase_app_id_file.json
+#**/google-services.json
+#**/*GoogleService*.*
+#**/firebase_app_id_file.json
 **/.env.production
