--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,7 @@ app.*.map.json
 
 coverage
 .vscode
+#**/google-services.json
+#**/*GoogleService*.*
+#**/firebase_app_id_file.json
+**/.env.production
