--- a/ios/firebase_app_id_file.json
+++ b/ios/firebase_app_id_file.json
@@ -1,7 +1,7 @@
 {
   "file_generated_by": "FlutterFire CLI",
   "purpose": "FirebaseAppID & ProjectID for this Firebase app in this directory",
-  "GOOGLE_APP_ID": "1:459886866921:ios:01aaae2087ab83e80d1b78",
-  "FIREBASE_PROJECT_ID": "laboratorio-ferreira",
-  "GCM_SENDER_ID": "459886866921"
+  "GOOGLE_APP_ID": "1:540598642215:ios:e92b2336073199fc2c5002",
+  "FIREBASE_PROJECT_ID": "laboratorio-ferreira-dev",
+  "GCM_SENDER_ID": "540598642215"
 }
