--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,14 +8,16 @@ environment:
   sdk: '>=2.18.5 <3.0.0'
 
 dependencies:
-  collection: ^1.17.0
+  collection: ^1.17.1
   connectivity_plus: ^3.0.2
   cupertino_icons: ^1.0.5
   dio: ^4.0.6
+  envied: ^0.3.0
   firebase_core: ^2.4.1
-  firebase_crashlytics: ^3.0.9
-  firebase_performance: ^0.9.0+9
-  flex_seed_scheme: ^1.1.0
+  firebase_crashlytics: ^3.0.11
+  firebase_performance: ^0.9.0+10
+  flex_seed_scheme: ^1.2.2
+
   flutter:
     sdk: flutter
   flutter_form_builder: ^7.7.0
@@ -26,29 +28,35 @@ dependencies:
   flutter_riverpod: ^2.1.3
   form_builder_validators: ^8.4.0
   freezed_annotation: ^2.2.0
-  go_router: ^6.0.1
+  go_router: ^6.0.2
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   hooks_riverpod: ^2.1.3
-  json_annotation: ^4.7.0
+  json_annotation: ^4.8.0
   jwt_decoder: ^2.0.1
   loggy: ^2.0.3
   mask: ^1.0.4
-  path_provider: ^2.0.11
+  path: ^1.8.3
+  path_provider: ^2.0.12
   pretty_dio_logger: ^1.1.1
   riverpod_annotation: ^1.1.1
   very_good_infinite_list: ^0.7.0
 
+dependency_overrides:
+  collection: 1.17.0
+  path: 1.8.2
+
 dev_dependencies:
   build_runner: ^2.3.3
+  envied_generator: ^0.3.0
   faker: ^2.1.0
   flutter_gen_runner: ^5.1.0+1
   flutter_lints: ^2.0.1
-  flutter_native_splash: ^2.2.16
+  flutter_native_splash: ^2.2.17
   flutter_test:
     sdk: flutter
   freezed: ^2.3.2
-  json_serializable: ^6.5.4
+  json_serializable: ^6.6.0
   mocktail: ^0.3.0
   riverpod_generator: ^1.1.1
 
