--- a/apps/desktop/pubspec.yaml
+++ b/apps/desktop/pubspec.yaml
@@ -1,4 +1,4 @@
-name: desktop
+name: laboratorio_ferreira_desktop
 description: A Very Good Project created by Very Good CLI.
 version: 1.0.0+1
 publish_to: none
