--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
 pubspec_overrides.yaml
 **/pubspec_overrides.yaml
-.idea/workspace.xml
+
+
+.idea/
+
+!.idea/codeStyles/
+!.idea/dictionaries/
+!.idea/runConfigurations/
